# eroshkin_a_t

./: .gitignore  CMakeLists.txt
prj.codeforces/: CMakeLists.txt
prj.codeforces/1004A/: 1004A.cpp  CMakeLists.txt
prj.codeforces/1006A/: 1006A.cpp  CMakeLists.txt
prj.codeforces/276A/: 276A.cpp  CMakeLists.txt
prj.codeforces/999B/: 999B.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/BitsetI/: bitsetI.h
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.h  bitset_test.cpp
prj.lab/bitsetD/: CMakeLists.txt  bitsetD.cpp  bitsetD.h  bitsetD_test.cpp
prj.lab/bitsetI/: CMakeLists.txt  bitsetI_test.cpp
prj.lab/bitsetT/: CMakeLists.txt  bitsetT.h  bitsetT_test.cpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.h  complex_test.cpp
prj.lab/profiling/: CMakeLists.txt  main.cpp  profiling.cpp
prj.lab/qu/: CMakeLists.txt  qu.cpp
prj.lab/queueP/: CMakeLists.txt  queueP.cpp  queueP.h  queueP_test.cpp
prj.lab/queueR/: CMakeLists.txt  queueR.cpp  queueR.h  queueR_test.cpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h  rational_test.cpp
